hphp/hack/test/typecheck/global_const7.php
<?hh

const mixed X = $y;
